test/studies/hpcc/RA/marybeth/ra-uint-test4.good
ra-uint-test4.chpl:2: error: type mismatch in assignment from int(64) to uint(64)
